Production/Utility/bacnetutility/templates/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress  
metadata:  
  name: bacnetutility-ingress 
  namespace: utility
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: terrestrial.cloud
      http:
        paths:
          - path: /bacnetutility/(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: bacnetutility-service
   
                port:
   
                  number: 31001
